2009-12-13  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Holger Freyther.

        [Qt] Re-enable QWebView::renderHints property for Qt for Symbian

        https://bugs.webkit.org/show_bug.cgi?id=28273

        The bug in Qt's moc that triggered a linking error when declaring this
        property has been fixed and we can remove the workaround.

        * Api/qwebview.h:

2009-12-11  Yael Aharon  <yael.aharon@nokia.com>

        Unreviewed build fix for Qt versions < 4.6.

        * tests/qwebframe/tst_qwebframe.cpp:
        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::reusePage):

2009-12-11  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Tor Arne Vestbø.

        [Qt] Updated QWebElement documentation
        
        findAll() returns a QWebElementCollection, not QList<QWebElement>.

        * docs/webkitsnippets/webelement/main.cpp:
        (findAll):

2009-12-11  Simon Hausmann  <hausmann@webkit.org>, Kim Grönholm  <kim.gronholm@nomovok.com>

        Reviewed by Antti Koivisto.

        Forward Qt touch events to the event handler as platform touch events.

        https://bugs.webkit.org/show_bug.cgi?id=32114

        * Api/qwebpage.cpp:
        (QWebPagePrivate::touchEvent):
        (QWebPage::event):
        * Api/qwebpage_p.h:

2009-12-07  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Improve the autotests of QtWebkit
        https://bugs.webkit.org/show_bug.cgi?id=32216

        Remove the calls to qWait() of the autotest of QWebView

        * tests/qwebview/tst_qwebview.cpp:
        (tst_QWebView::reusePage):

2009-12-07  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Improve the autotests of QtWebkit
        https://bugs.webkit.org/show_bug.cgi?id=32216

        Refactor tst_qwebframe to remove qWait() and use
        the function waitForSignal() from util.h
